Closed
Bug 1021973
Opened 8 years ago
Closed 8 years ago
Remove gfxPlatform::OptimizeImage()
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
RESOLVED
FIXED
mozilla33
People
(Reporter: jwatt, Assigned: jwatt)
References
Details
Attachments
(1 file)
2.65 KB,
patch
|
bas.schouten
:
review+
|
Details | Diff | Splinter Review |
Dead code.
![]() |
Assignee | |
Comment 1•8 years ago
|
||
Attachment #8436104 -
Flags: review?(bas)
![]() |
Assignee | |
Comment 2•8 years ago
|
||
https://tbpl.mozilla.org/?tree=Try&rev=a6f7241c784f
Updated•8 years ago
|
Attachment #8436104 -
Flags: review?(bas) → review+
![]() |
Assignee | |
Comment 3•8 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/8c40e8510321
Comment 4•8 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/8c40e8510321
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
Comment 5•8 years ago
|
||
Ups: /gfx/thebes/gfxQtPlatform.h:31:5: error: ‘virtual already_AddRefed<gfxASurface> gfxQtPlatform::OptimizeImage(gfxImageSurface*, gfxImageFormat)’ marked override, but does not override OptimizeImage(gfxImageSurface *aSurface, ^
Comment 6•8 years ago
|
||
also there are some leftovers in gfxPlatformMac
![]() |
Assignee | |
Comment 7•8 years ago
|
||
Dunno how I missed that, thanks.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
![]() |
Assignee | |
Comment 8•8 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/6375e7108df9 r+ from Bas on IRC.
https://hg.mozilla.org/mozilla-central/rev/6375e7108df9
Status: REOPENED → RESOLVED
Closed: 8 years ago → 8 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•