Bug 1021973 - Remove gfxPlatform::OptimizeImage(). r=Bas